k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woning-web
  namespace: ns-os8fj70c
  labels:
    app: woning
    component: web
spec:
  type: ClusterIP
  selector:
    app: woning
    component: web
  ports:
    - name: http
      port: 80
      targetPort: http
